common/css/overlays.css: fix - left aligned text in dialogs
- Happened when text-align: center was removed for splashScreen
- Added the property to dialog and menu contents (not splashScreen)

--- a/development/public/common/css/overlays.css
+++ b/development/public/common/css/overlays.css
@@ -51,6 +51,7 @@
     justify-content: center;       /* center items vertically in this case */
     max-height: 50vh;
     overflow: auto;
+    text-align: center;
 }
 .alertDialog button,
 .actionDialog button,
